fixed header menu, wrapped h3 in links

--- a/css/style.css
+++ b/css/style.css
@@ -445,14 +445,14 @@ footer img {
     }
     header li {
         text-align: center;
-        margin-bottom: 6px;
     }
     header a {
         display: inline-block;
-        padding: 3px 0;
+        padding: 5px 0;
     }
-    header a:hover {
+    header li a:hover {
         border-bottom: 1px solid #626262;
+        padding-bottom: 4px;
     }
     .content {
         padding: 0 20px;
